--- a/azure/config/otel-collector-config.yaml
+++ b/azure/config/otel-collector-config.yaml
@@ -11,7 +11,7 @@ processors:
 
 exporters:
   azuremonitor:
-    connection_string: InstrumentationKey=c96ac62b-b56e-4efa-8637-8dfaa388c49e;IngestionEndpoint=https://japaneast-1.in.applicationinsights.azure.com/;LiveEndpoint=https://japaneast.livediagnostics.monitor.azure.com/;ApplicationId=0fddd1be-1bdc-4838-9ad3-020c7be81eff
+    connection_string: ${env:CONNECTION_STRING}
 
 pipelines:
   traces:
