Fixed collector config

--- a/azure/config/otel-collector-config.yaml
+++ b/azure/config/otel-collector-config.yaml
@@ -13,16 +13,17 @@ exporters:
   azuremonitor:
     connection_string: ${env:CONNECTION_STRING}
 
-pipelines:
-  traces:
-    receivers: [otlp]
-    processors: [batch]
-    exporters: [azuremonitor]
-  # metrics:
-  #   receivers: [otlp]
-  #   processors: [batch]
-  #   exporters: [azuremonitor]
-  # logs:
-  #   receivers: [otlp]
-  #   processors: [batch]
-  #   exporters: [azuremonitor]
+service:
+  pipelines:
+    traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [azuremonitor]
+    # metrics:
+    #   receivers: [otlp]
+    #   processors: [batch]
+    #   exporters: [azuremonitor]
+    # logs:
+    #   receivers: [otlp]
+    #   processors: [batch]
+    #   exporters: [azuremonitor]
