--- a/azure/config/otel-collector-config.yaml
+++ b/azure/config/otel-collector-config.yaml
@@ -5,6 +5,13 @@ receivers:
         endpoint: 0.0.0.0:4317
       http:
         endpoint: 0.0.0.0:4318
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: kong-dp
+          scrape_interval: 10s
+          static_configs:
+            - targets: ["localhost:8100"]
 
 processors:
   batch:
@@ -19,10 +26,10 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [azuremonitor]
-    # metrics:
-    #   receivers: [otlp]
-    #   processors: [batch]
-    #   exporters: [azuremonitor]
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [azuremonitor]
     # logs:
     #   receivers: [otlp]
     #   processors: [batch]
