Added debug exporter

--- a/azure/config/otel-collector-config.yaml
+++ b/azure/config/otel-collector-config.yaml
@@ -19,6 +19,10 @@ processors:
 exporters:
   azuremonitor:
     connection_string: ${env:CONNECTION_STRING}
+  debug:
+    verbosity: detailed
+    sampling_initial: 5
+    sampling_thereafter: 200
 
 service:
   pipelines:
@@ -29,7 +33,7 @@ service:
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [azuremonitor]
+      exporters: [azuremonitor, debug]
     # logs:
     #   receivers: [otlp]
     #   processors: [batch]
