Override args settings

--- a/azure/config/otel-collector-config.yaml
+++ b/azure/config/otel-collector-config.yaml
@@ -36,7 +36,9 @@ service:
         - azuremonitor
     metrics:
       receivers:
-        - otlp
+        - prometheus
+      processors:
+        - batch
       exporters:
         - azuremonitor
         - debug
